DDI-Lifecycle/3.2/model/_sources/composite-types/VariableRepresentationType/index.rst.txt
VariableRepresentationType
--------------------------

Describes the representation of the variable in the data set. Describes the function of the variable, variables or standard weights that may be used to weight this variable during analysis, imputation and processing information, other variables used to create the value of this variable through concatenation, valid value representations (valid for analysis of respondents), missing value representations, aggregation methods used to generate the content of the variable, and additivity information.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "VariableRole",":doc:`/composite-types/CodeValueType/index`","0..1","Describes a specific function of the variable, such as identity, weight, geographic variable, time, date, currency, etc. This is a more extensive means of identifying the function of the variable than the Boolean indicators on the variable. Allows for agency specific designations. Supports the use of a controlled vocabulary."
   "WeightVariableReference",":doc:`/item-types/Variable/index`","0..n","Reference to one or more weight variables that may be used in analyzing this variable."
   "StandardWeightReference",":doc:`/composite-types/StandardWeightType/index`","0..1","Reference to the StandardWeight found in the Weighting description, which is relevant for analyzing this variable. A standard weight is a single weight used for all variables of a specific type or for a specified sub-universe."
   "ImputationReference_GeneralInstruction",":doc:`/item-types/GeneralInstruction/index`","0..1","Reference to the imputation process described as a General Instruction in a ProcessingInstructionScheme."
   "ImputationReference_GenerationInstruction",":doc:`/item-types/GenerationInstruction/index`","0..1","Reference to the imputation process described as a General Instruction in a ProcessingInstructionScheme."
   "ConcatenatedValue",":doc:`/composite-types/ConcatenatedValueType/index`","0..1","Provides a reference to other variables and describes the method for deriving the value of this variable by concatenating a collection of other variables. This is useful in creating concatenated keys."
   "ProcessingInstructionReference",":doc:`/item-types/GenerationInstruction/index`","0..1","A reference to either a general or generation instruction that was provided to those who converted information from one form to another to create a particular variable. This might include the reordering of numeric information into another form or the conversion of textual information into numeric information."
   "ValueRepresentation",":doc:`/composite-types/RepresentationType/index`","0..1","Describes the actual representation of the variables' values. Allows for the listing of values to be treated as missing in order to support 3.1 structures. The preferred method is the use of a reference to ManagedMissingValues description using MissingValuesReference. If both are used and there is a conflict in the content, MissingValuesReference will override the content provided in the ValueRepresentationReference."
   "ValueRepresentationReference_ManagedMissingValuesRepresentation",":doc:`/item-types/ManagedMissingValuesRepresentation/index`","0..1","Allows for the use of a ManagedRepresentation by reference. ValueRepresentationReference is the abstract head of a substitution group and may be replaced with any valid substitution for ValueRepresentationReference."
   "ValueRepresentationReference_ManagedScaleRepresentation",":doc:`/item-types/ManagedScaleRepresentation/index`","0..1","Allows for the use of a ManagedRepresentation by reference. ValueRepresentationReference is the abstract head of a substitution group and may be replaced with any valid substitution for ValueRepresentationReference."
   "ValueRepresentationReference_ManagedNumericRepresentation",":doc:`/item-types/ManagedNumericRepresentation/index`","0..1","Allows for the use of a ManagedRepresentation by reference. ValueRepresentationReference is the abstract head of a substitution group and may be replaced with any valid substitution for ValueRepresentationReference."
   "ValueRepresentationReference_ManagedDateTimeRepresentation",":doc:`/item-types/ManagedDateTimeRepresentation/index`","0..1","Allows for the use of a ManagedRepresentation by reference. ValueRepresentationReference is the abstract head of a substitution group and may be replaced with any valid substitution for ValueRepresentationReference."
   "ValueRepresentationReference_ManagedTextRepresentation",":doc:`/item-types/ManagedTextRepresentation/index`","0..1","Allows for the use of a ManagedRepresentation by reference. ValueRepresentationReference is the abstract head of a substitution group and may be replaced with any valid substitution for ValueRepresentationReference."
   "MissingValuesReference",":doc:`/item-types/ManagedMissingValuesRepresentation/index`","0..1","Reference to an existing MissingValuesRepresentation using the Reference structure. If this content conflicts with content provided in the ValueRepresentation regarding Missing Values. The content of the MissingValuesRepresentation overrides. TypeOfObject will be MissingValuesRepresentation"
   "MeasurementUnit",":doc:`/composite-types/CodeValueType/index`","0..1","Records the measurement unit, for example, 'km', 'miles', etc. Supports the use of a controlled vocabulary."
   "ContentDateOffset",":doc:`/composite-types/ContentDateOffsetType/index`","0..1","Identifies the difference between the date applied to the data as a whole and this specific item such as previous year's income or residence 5 years ago."
   "AggregationMethod",":doc:`/composite-types/CodeValueType/index`","0..1","Indicates the type of aggregation method used. Supports the use of a controlled vocabulary."
   "Additivity","string","0..1","Records type of additivity, such as 'stock', 'flow', 'non-additive'."


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/Variable/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/VariableRepresentationType.svg

